# 2017-tfm-jorge_vela

./: CMakeLists.txt  README.md  computeDetectionFaces.cpp  testProgram.cpp  test_mat.cpp  test_umat.cpp
Memoria/: 1-Introduccion.tex  2-Objetivos.tex  3-Algoritmo.tex  4-Experimentos.tex  5-Conclusiones.tex  Memoria.tex  Portada.tex  Resumen.tex
Python/: compare_files_detections.py
c++/: ChannelsBordersExtractor.cpp  ChannelsBordersExtractor.h  ChannelsGradientMagnitudeExtractor.cpp  ChannelsGradientMagnitudeExtractor.h  ChannelsLUVExtractor  ChannelsLUVExtractor.cpp  ChannelsLUVExtractor.h  viewOpen
chnsTest/: chnsTest  chnsTestCpp.cpp  convConst.cpp  gradientMex.cpp  imResampleMex.cpp  nchnsTest  newChnsTest.cpp  rgbConvertMex.cpp  testchns
matlab_files/: clf2yml.m  matlab2opencv.m  matlab2opencv_bk.m  pyramid2yml.m  save_acf_channels.m  save_gradient_channels.m  save_imResample_results.m  test_extract_acf_channels_data.m  test_extract_gradient_channels.m  test_imResample.m
matlab_files/kitti_plot_results_cpp/: plot_result_fig_kitti.m  plot_results_cpp.m
matlab_files/kitti_plot_results_cpp/KITTI_CARS_DETECTION_EXPERIMENTS/BADACOST_1_3_3_D_8_T_1024_N_7500_NA_30000/: KITTI_SHRINKAGE_0.100000_RESAMPLING_1.000000_ASPECT_RATIO_1.750000_Detector.mat  KITTI_SHRINKAGE_0.100000_RESAMPLING_1.000000_ASPECT_RATIO_1.750000_Dets.txt  KITTI_SHRINKAGE_0.100000_RESAMPLING_1.000000_ASPECT_RATIO_1.750000_Log.txt  KITTI_TEST_RESULTS.mat
matlab_files/kitti_plot_results_cpp/KITTI_CARS_DETECTION_EXPERIMENTS/BADACOST_1_3_3_D_8_T_1024_N_7500_NA_30000/LABELS_RESULTS/: 006733.txt  006734.txt  006735.txt  006736.txt  006737.txt  006738.txt  006739.txt  006740.txt  006741.txt  006742.txt  006743.txt  006744.txt  006745.txt  006746.txt  006747.txt  006748.txt  006749.txt  006750.txt  006751.txt  006752.txt  006753.txt  006754.txt  006755.txt  006756.txt  006757.txt  006758.txt  006759.txt  006760.txt  006761.txt  006762.txt  006763.txt  006764.txt  006765.txt  006766.txt  006767.txt  006768.txt  006769.txt  006770.txt  006771.txt  006772.txt  (+653 more)
matlab_files/kitti_plot_results_cpp/KITTI_CARS_DETECTION_EXPERIMENTS/BADACOST_CPP_ALL_PARALLEL/LABELS_RESULTS/: 006733.txt  006736.txt  006739.txt  006741.txt  006745.txt  006747.txt  006748.txt  006749.txt  006751.txt  006752.txt  006754.txt  006755.txt  006756.txt  006757.txt  006758.txt  006759.txt  006761.txt  006762.txt  006763.txt  006765.txt  006767.txt  006771.txt  006773.txt  006774.txt  006781.txt  006782.txt  006783.txt  006784.txt  006787.txt  006788.txt  006789.txt  (+339 more)
matlab_files/kitti_plot_results_cpp/kitti_cpp_evaluation_code/: CMakeLists.txt
obj_detect/: CMakeLists.txt
obj_detect/include/channels/: ChannelsCompute.h  ChannelsExtractorACF.h  ChannelsExtractorGradHist.h  ChannelsExtractorGradHistOpenCL.h  ChannelsExtractorGradHistOpenCV.h  ChannelsExtractorGradHistPDollar.h  ChannelsExtractorGradMag.h  ChannelsExtractorGradMagOpenCL.h  ChannelsExtractorGradMagOpenCV.h  ChannelsExtractorGradMagPDollar.h  ChannelsExtractorLDCF.h  ChannelsExtractorLUV.h  ChannelsExtractorLUVOpenCL.h  ChannelsExtractorLUVOpenCV.h  ChannelsExtractorLUVPDollar.h  ChannelsExtractorMex.h  ChannelsPyramid.h  ImageResample.h  Utils.h  badacostDetector.h
obj_detect/include/detectors/: BadacostDetector.h  ClassifierConfig.h  DetectionRectangle.h  DetectionRectangle.hpp  badacostDetector.h
obj_detect/include/pyramid/: ChannelsPyramid.h  ChannelsPyramidApproximatedParallelStrategy.h  ChannelsPyramidApproximatedStrategy.h  ChannelsPyramidComputeAllParallelStrategy.h  ChannelsPyramidComputeAllStrategy.h  ChannelsPyramidOpenCL.h  ChannelsPyramidPackedImgStrategy.h
obj_detect/src/: CMakeLists.txt
obj_detect/src/channels/: CMakeLists.txt  ChannelsCompute.cpp  ChannelsExtractorACF.cpp  ChannelsExtractorGradHist.cpp  ChannelsExtractorGradHistOpenCL.cpp  ChannelsExtractorGradHistOpenCV.cpp  ChannelsExtractorGradHistPDollar.cpp  ChannelsExtractorGradMag.cpp  ChannelsExtractorGradMagOpenCL.cpp  ChannelsExtractorGradMagOpenCV.cpp  ChannelsExtractorGradMagPDollar.cpp  ChannelsExtractorLDCF.cpp  ChannelsExtractorLUV.cpp  ChannelsExtractorLUVOpenCL.cpp  ChannelsExtractorLUVOpenCV.cpp  ChannelsExtractorLUVPDollar.cpp  ChannelsExtractorMex.cpp  ChannelsPyramid.cpp  ImageResample.cpp  TestChannelsExtractorGradMag.cpp  TestUtils.cpp  Utils.cpp  badacostDetector.cpp  opencvtest.cpp  sse.hpp
obj_detect/src/detectors/: BadacostDetector.cpp  CMakeLists.txt  DetectionRectangle.cpp  badacostDetector.cpp
obj_detect/src/pyramid/: CMakeLists.txt  ChannelsPyramid.cpp  ChannelsPyramidApproximatedParallelStrategy.cpp  ChannelsPyramidApproximatedStrategy.cpp  ChannelsPyramidComputeAllParallelStrategy.cpp  ChannelsPyramidComputeAllStrategy.cpp  ChannelsPyramidOpenCL.cpp  ChannelsPyramidPackedImgStrategy.cpp
obj_detect/tests/: CMakeLists.txt  HRealImage.yml  MRealImage.yaml  ORealImage.yaml  TestBadacostDetector.cpp  TestChannelsExtractorACF.cpp  TestChannelsExtractorGradHist.cpp  TestChannelsExtractorGradMag.cpp  TestChannelsExtractorLDCF.cpp  TestChannelsExtractorLUV.cpp  TestChannelsExtractorMex.cpp  TestChannelsPyramid.cpp  TestDetectionRectangle.cpp  TestImageResample.cpp  TestUtils.cpp  main.cpp  matlab2opencv.m
obj_detect/tests/yaml/: 00_filterTest_faces_AFLW.yml  0_Filtered.yml  0_LUV_1.yml  HchnsCompute.yaml  LDCF.yml  LDFSintetic_1.yml  LDFSintetic_18.yml  LDFSintetic_35.yml  LDFSintetic_size5_23.yml  LDFSintetic_size5_36.yml  M_changed_luv.yaml  M_colorScale.yaml  O_colorScale.yaml  TestConv1.yml  TestConv2.yml  TestConvReal.yml  TestHColorBinSizeOrients.yml  TestHColorScale.yml  TestHist1ChnsCompute.yml  TestImresample1.yml  TestImresample2.yml  TestImresampleReal_1.yml  TestImresampleReal_2.yml  TestImresampleReal_3.yml  TestImresampleReduce.yml  TestMChnsCompute.yml  TestMColorNormRad.yml  TestMColorNormRadConst.yml  TestMColorScale.yml  TestMGrayScale.yml  TestMagChnsCompute.yml  TestOColorNormRad.yml  TestOColorNormRadConst.yml  TestOColorScale.yml  TestOGrayScale.yml  acfChannelsScale0_coche_solo1_png.yaml  convTri.yml  filterTest.yml  imresample_1.yaml  imresample_2.yaml  (+20 more)
(+3534 files in other folders)
